--- a/index.html
+++ b/index.html
@@ -1,22 +1,3 @@
-<?php
-require_once('config.php');
-session_start();
-if ($_SERVER['REQUEST_METHOD'] === 'POST') {
-    $name = $_POST['name'];
-    $gender = $_POST['gender'];
-    $email = $_POST['email'];
-    $message = $_POST['message'];
-
-    $sql = "INSERT INTO feedback (name, gender, email, message, created_at) VALUES ('$name', '$gender', '$email', '$message', NOW())";
-    if (mysqli_query($db, $sql)) {
-        header("Location: index.php");
-        exit();
-    } else {
-        echo 'Error: ' . mysqli_error($conn);
-    }
-}
-
-?>
 <!DOCTYPE html>
 <html>
 
@@ -69,7 +50,26 @@ if ($_SERVER['REQUEST_METHOD'] === 'POST') {
     <!-- <div class="loader">
         <div class="loader-progress"></div>
     </div> -->
-    <?php include 'includes/header.php'; ?>
+    <header class="header">
+        <!-- <div class="profile">
+            <img src="pic.jpg" alt="Your Profile Picture" onclick="reloadPage()">
+        </div> -->
+        <div class="container fade-in" id="cont">
+            <nav class="navbar">
+                <a href="index.php#home"><i class="fas fa-home" style="color: #FF0000;"></i> Home</a>
+                <a href="index.php#about"><i class="fas fa-user" style="color: #000000;"></i> About</a>
+                <a href="index.php#education"><i class="fas fa-graduation-cap" style="color: #0000FF;"></i> Education &
+                    Skills</a>
+                <a href="index.php#portfolio"><i class="fas fa-briefcase" style="color: #FF00FF;"></i> Portfolio</a>
+                <a href="index.php#contact"><i class="fas fa-envelope" style="color: green;"></i> Contact</a>
+                <a href="https://drive.google.com/file/d/1Xo96IL7N0ODc4Z16CJZP6mnawe75hj4H/view?usp=sharing"
+                    target="_blank" download><i class="fas fa-file-download" style="color: #777;"></i> Download
+                    Resume</a>
+            </nav>
+        </div>
+    </header>
+
+
     <section class="hero" id="home">
         <div class="hero-content">
             <div class="name fade-in">
@@ -268,7 +268,15 @@ if ($_SERVER['REQUEST_METHOD'] === 'POST') {
         </div>
     </section>
 
-    <?php include 'includes/footer.php'; ?>
+    <footer class="footer">
+        <div class="bottom-footer fade-in">
+            <p>&copy; 2023 Rahul Bangar. All rights reserved.</p>
+            <a href="#top" class="back-to-top">
+                <i class="fas fa-arrow-up"></i>
+            </a>
+        </div>
+    </footer>
+
     <script>
         // Wait for the page to load
         document.addEventListener('DOMContentLoaded', function () {
