--- a/index.html
+++ b/index.html
@@ -51,17 +51,14 @@
         <div class="loader-progress"></div>
     </div> -->
     <header class="header">
-        <!-- <div class="profile">
-            <img src="pic.jpg" alt="Your Profile Picture" onclick="reloadPage()">
-        </div> -->
         <div class="container fade-in" id="cont">
             <nav class="navbar">
-                <a href="index.php#home"><i class="fas fa-home" style="color: #FF0000;"></i> Home</a>
-                <a href="index.php#about"><i class="fas fa-user" style="color: #000000;"></i> About</a>
-                <a href="index.php#education"><i class="fas fa-graduation-cap" style="color: #0000FF;"></i> Education &
+                <a href="#home"><i class="fas fa-home" style="color: #FF0000;"></i> Home</a>
+                <a href="#about"><i class="fas fa-user" style="color: #000000;"></i> About</a>
+                <a href="#education"><i class="fas fa-graduation-cap" style="color: #0000FF;"></i> Education &
                     Skills</a>
-                <a href="index.php#portfolio"><i class="fas fa-briefcase" style="color: #FF00FF;"></i> Portfolio</a>
-                <a href="index.php#contact"><i class="fas fa-envelope" style="color: green;"></i> Contact</a>
+                <a href="#portfolio"><i class="fas fa-briefcase" style="color: #FF00FF;"></i> Portfolio</a>
+                <a href="#contact"><i class="fas fa-envelope" style="color: green;"></i> Contact</a>
                 <a href="https://drive.google.com/file/d/1Xo96IL7N0ODc4Z16CJZP6mnawe75hj4H/view?usp=sharing"
                     target="_blank" download><i class="fas fa-file-download" style="color: #777;"></i> Download
                     Resume</a>
@@ -237,16 +234,6 @@
                 <i class="fas fa-phone" style="color: green;"></i> Phone Number:
                 <a href="tel:+919729648677">+91 9729648677</a>
             </p>
-
-
-            <h4>Feedback</h4>
-            <form method="post" action="<?php echo htmlspecialchars($_SERVER['PHP_SELF']); ?>">
-                <input type="text" name="name" placeholder="Your Name" required>
-                <input type="email" name="email" placeholder="Your Email" required>
-                <textarea name="subject" placeholder="Subject" required></textarea>
-                <textarea name="message" placeholder="Your Message" required></textarea>
-                <button type="submit">Send Message</button>
-            </form>
         </div>
     </section>
     <section class="social-media ">
