--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>www.rahulbangar.com</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/head.css">
     <link rel="stylesheet" type="text/css" href="css/media_icons.css">
@@ -225,7 +226,6 @@
     </section>
     <section class="social-media ">
         <div class="container fade-in">
-            <h2>Social Media</h2>
             <ul class="social-links">
                 <li><a href="https://www.facebook.com/irahulbangar7/" class="facebook" target="_blank"><i
                             class="fab fa-facebook-f"></i></a></li>
